tests/errors/use_outside_scope.x
function my_scope
  read x
  write x
endfunction

z = x + 2